--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  </link>
   <meta name="description" content="Web site created using create-react-app" />
   <title>Tinindo</title>
   <!--
